src/test/ui/parser/if-attrs/deny-if-attr-validation.stderr
error: attributes are not yet allowed on `if` expressions
  --> $DIR/deny-if-attr-validation.rs:9:5
   |
LL |     #[allow(warnings)] if true {}
   |     ^^^^^^^^^^^^^^^^^^

error: attributes are not yet allowed on `if` expressions
  --> $DIR/deny-if-attr-validation.rs:14:5
   |
LL |     #[allow(warnings)] if let Some(_) = Some(true) {
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

